--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
     flex-direction: row;
     background-color: #161616;
     width: 100%;
-    height: 70px;
+    height: 7vh;
     justify-content: space-between;
     align-items: center;
 }
@@ -23,6 +23,7 @@ html, body {
     display: flex;
     flex-direction: row;
     padding-right: 35px;
+    padding-top: 7px;
 }
 
 .nav-links nav ul li {
@@ -40,7 +41,8 @@ html, body {
 }
 
 .logo {
-    padding-left: 20px;
+    padding-top: 3px;
+    margin-left: 15px;
 }
 
 .menu-button {
