--- a/style.css
+++ b/style.css
@@ -44,6 +44,43 @@ html, body {
     padding-top: 3px;
     margin-left: 15px;
 }
+.wrapper-menu {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    transition: transform 330ms ease-out;
+    margin-right: 20px;
+}
+.wrapper-menu .line {
+    background-color: white;
+    border-radius: 5px;
+    width: 100%;
+    height: 5px;
+}
+.wrapper-menu .line.half {
+    width: 50%;
+}
+.wrapper-menu .line.start {
+    transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+    transform-origin: right;
+}
+.wrapper-menu .line.end {
+    align-self: flex-end;
+    transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+    transform-origin: left;
+}
+.wrapper-menu.open {
+    transform: rotate(-45deg);
+}
+.wrapper.open-menu .line.start {
+    transform: rotate(-90deg) translateX(3px);
+}
+.wrapper.open-menu .line.end {
+    transform: rotate(-90deg) translateX(-3px);
+}
 
 .menu-button {
     padding-right: 20px;
@@ -60,6 +97,7 @@ html, body {
     padding: 20px;
     height: auto;
     transition: all 0.3s;
+
 }
 @keyframes gradientAnimation {
     0% {
@@ -74,7 +112,6 @@ html, body {
 }
 
 .greeting {
-
     padding: 20px;
     margin: 0;
     display: flex;
@@ -104,12 +141,17 @@ h1 {
     white-space: nowrap;
     overflow: hidden;
 
+
 }
 
 .quote {
+    font-family: "Playfair Display SC", serif;
+    font-weight: 400;
+    font-weight: 500;
     font-size: 1.25vw;
     margin-left: 20px;
     margin-top: 10px; /* Add a bit of margin for spacing */
+    text-align: right;
 }
 
 
@@ -179,9 +221,9 @@ h2{
 /*..........................*/
 
 .alpha{
-    height: 1250pt;
+    height: 10%;
+    /* background-image:url("./Assets/plant.jpg"); */
     background: linear-gradient(270deg, #75eaff, #ffadad);
-    background-color: #fc0f0f;
     flex-direction: column;
 }
 .subsection{
@@ -203,13 +245,65 @@ h3{
 }
 .top{
     /* padding-left: 30vw; */
-    margin-top: 2.5vw;
+    margin-top: 2.75vw;
     margin-left: 40vw;
-    background-color: rgb(59, 54, 54);
+    /* background-color: rgb(59, 54, 54); */
     font-size: clamp(2.7rem, 8.5vw, 8rem);
     text-align: center;
 }
-.summary{
+.accordion {
+    width: 90%;
+    max-width: 90%;
+    margin: 2rem auto;
+  }
+  .accordion-item {
+    background-color: #fff;
+    background-color: rgba(255,255,255,0.5);
+    color: #111;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
+  }
+  .accordion-item-header {
+    padding: 0.5rem 3rem 0.5rem 1rem;
+    min-height: 3.5rem;
+    line-height: 1.25rem;
+    font-weight: bold;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+  }
+  .accordion-item-header::after {
+    content: "\002B";
+    font-size: 2rem;
+    position: absolute;
+    right: 1rem;
+  }
+  .accordion-item-header.active::after {
+    content: "\2212";
+  }
+  .accordion-item-body {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
+  .accordion-item-body-content {
+    font-family: "Exo 2", sans-serif;
+    font-style: normal;
+    padding: 1rem;
+    line-height: 30px;
+    border-top: 1px solid;
+    border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
+  }
+  
+  @media(max-width:767px) {
+    html {
+      font-size: 14px;
+    }
+  }
+    .summary{
     font-family: "Anton SC", sans-serif;
     font-weight: 00;
     font-style: normal;
@@ -217,19 +311,21 @@ h3{
     letter-spacing: 1px;
     padding-left:20px;
     padding-right: 20px;
-}
-.caps{
+    text-indent: 5vw;
+
+    }
+    .caps{
     font-size: clamp(2rem, 5vw, 4rem);
     color: black;
-}
-.hidden{
+    }
+    .hidden{
     opacity: 0;
     filter: blur(5px);
     transform: translateX(-100%);
     transition: all 1s;
     transition-delay: 0.3s; /* Add delay here */
-}
-.show{
+    }
+    .show{
     opacity: 1;
     filter: blur(0);
     transform: translateX(0);
@@ -267,5 +363,14 @@ h3{
 @media (max-width: 768px) {
     .nav-links {
         display: none; /* Hides the navigation links on mobile devices */
+    }
+    .quote{
+        font-size: 1.74vw;
+        font-weight: 500;
+        transition: ease-in;
+        text-align: center;
+    }
+    .accordion-item-header {
+        font-size: 15px;
     }
 }
