--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 html, body {
     padding: 0;
     margin: 0;
@@ -42,7 +43,13 @@ html, body {
 
 .logo {
     padding-top: 3px;
-    margin-left: 15px;
+    margin-right: 0px;
+    padding-left: 5vw;
+
+
+}
+.logo-img{
+    height: 50px;
 }
 .wrapper-menu {
     width: 30px;
@@ -58,7 +65,7 @@ html, body {
     background-color: white;
     border-radius: 5px;
     width: 100%;
-    height: 5px;
+    height: 2px;
 }
 .wrapper-menu .line.half {
     width: 50%;
@@ -89,7 +96,7 @@ html, body {
 .Introduction {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background: linear-gradient(270deg, #75eaff, #ffadad);
     animation: gradientAnimation 10s ease infinite;
@@ -140,20 +147,15 @@ h1 {
     margin: 0;
     white-space: nowrap;
     overflow: hidden;
-
-
 }
 
 .quote {
-    font-family: "Playfair Display SC", serif;
-    font-weight: 400;
-    font-weight: 500;
+    font-family:Arial, Helvetica, sans-serif;
     font-size: 1.25vw;
     margin-left: 20px;
     margin-top: 10px; /* Add a bit of margin for spacing */
     text-align: right;
 }
-
 
 /*..........................*/
 
@@ -170,17 +172,19 @@ h1 {
 }
 .whoAmI {
     background-color: #161616;
+    height: 27vw;
 }
 h2{
     font-family: "Anton SC", sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     font-style: normal;
-    font-size: 5vw;
-    padding-left: 25px;
+    font-size: 2.5vw;
+   
 
 }
 .name{
-    font-size: 10vw;
+    
+    font-size: 11vw;
     text-indent: 20;
 }
 
@@ -190,9 +194,10 @@ h2{
     font-family: "Anton SC", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-size: 5vw;
+    font-size: 5.5vw;
+    padding-bottom: 30;
     padding-left: 25px;
-    position: relative;
+    position:absolute;
     transition: all 0.2s ease-out;
     color: white;
 }
@@ -204,6 +209,7 @@ h2{
 #scrollText.reveal::after {
     content: "Nice to meet you";
     position: absolute;
+    padding-left: 25px;
     top: 0;
     left: 0;
     font-size: 10vw;
@@ -221,7 +227,7 @@ h2{
 /*..........................*/
 
 .alpha{
-    height: 10%;
+    /* height:200 ; */
     /* background-image:url("./Assets/plant.jpg"); */
     background: linear-gradient(270deg, #75eaff, #ffadad);
     flex-direction: column;
@@ -359,14 +365,76 @@ h3{
     width: 20vw;
 }
 
+.footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    background-color: #161616;
+    height: 7vw;
+}
 
-@media (max-width: 768px) {
+.social-container {
+    align-content: center;
+    text-align: right;
+    background-color: #161616;
+    padding-right: 35px;
+  }
+  .social-icons {
+    padding: 0;
+    list-style: none;
+  }
+  .social-icons li {
+    display: flex;
+    display: inline-block;
+    margin: 0.15em;
+    position: relative;
+    font-size: 3vw;
+  }
+  .social-icons i {
+    color: #fff;
+    top: 21px;
+    left: 21px;
+    transition: all 265ms ease-out;
+    padding: 10px;
+  }
+  
+  .social-icons a:hover:before {
+    transform: scale(0);
+    transition: all 265ms ease-in;
+    padding:0px;
+  }
+  
+  .social-icons a:hover i {
+    transform: scale(1.6);
+    -ms-transform: scale(1.6);
+    -webkit-transform: scale(1.6);
+    color: #ff003c;
+    background: -webkit-linear-gradient(45deg, #ff7e5f, #feb47b);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: all 265ms ease-in;
+  }
+
+
+  @media (max-width: 768px) {
+    .navigation-bar {
+        height: 9vw;
+    }
     .nav-links {
         display: none; /* Hides the navigation links on mobile devices */
     }
     .Introduction {
         display: flex;
         flex-direction: column;
+    }
+    .logo-img{
+        height: 30px;
+    }
+    .wrapper-menu {
+        height: 20px
+    }
+    .greeting{
+        margin:0px;
     }
     h1 {
         font-size: 11.5vw;
@@ -378,11 +446,34 @@ h3{
     }
     .quote{
         font-size: 1.74vw;
-        font-weight: 500;
+        font-weight: 800;
         transition: ease-in;
         text-align: center;
     }
+    .whoAmI{
+        height: 30vw;
+        padding: 0px;
+    }
+    .name{
+      padding-top: 20px;
+
+    }
+    #scrollText{
+        padding-top: 0px;
+        font-size: 6vw;
+    }
     .accordion-item-header {
         font-size: 15px;
+    }
+    .social-container {
+        display: inline;
+        text-align: center;
+        padding:0px;
+    }
+    .social-icons {
+        margin: 5px;
+    }
+    .social-icons li{
+        font-size: 5vw;
     }
 }
